# keymouse

./: README.md  pyproject.toml
keymouse/: main.py
tests/: test_keymouse.py
